--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage" : "https://DANA-HYEON.github.io/react-project"
+  "homepage" : "https://DANA-HYEON.github.io/react-project/"
 }
